dnl Process this file with autoconf to produce a configure script.
AC_INIT(keyboard/bios.c)
AM_CONFIG_HEADER(config.h)

dnl Detect the canonical host and target build environment
AC_CANONICAL_SYSTEM

AM_INIT_AUTOMAKE(cleancode, 0.16)

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CHECK_LIB(gem, appl_init)

# Output
AC_OUTPUT([
Makefile
common/Makefile
audio/Makefile
bus/Makefile
cdrom/Makefile
disk/Makefile
joystick/Makefile
keyboard/Makefile
mouse/Makefile
video/Makefile
])
