dnl Process this file with autoconf to produce a configure script.
AC_INIT(bwb_cmd.c)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_SIZE_T
AC_HEADER_CHECK(string.h, AC_DEFINE(HAVE_STRING))
AC_HEADER_CHECK(stdlib.h, AC_DEFINE(HAVE_STDLIB))
AC_HEADER_CHECK(unistd.h, AC_DEFINE(HAVE_UNISTD))
AC_COMPILE_CHECK(raise, [#include <sys/types.h>
#include <signal.h>], [raise(1);], AC_DEFINE(HAVE_RAISE))
AC_OUTPUT(Makefile)
